--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,55 @@ header.active{
     text-decoration: none;
 }
 
+.menu{
+    color: #000000;
+    font-size: 2em;
+    transition: 0.5s;
+
+}
+
+.nav{
+    display: flex;
+}
+
+.nav li{
+    list-style: none;
+    margin: 0 20px;
+}
+
+.nav li a{
+    color: #000000;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: 0.5s;
+    font-weight: 350;
+    padding: 10px;
+}
+
+.nav li a:hover,
+.nav li a.active{
+    color: var(--primary);
+}
+
+.search{
+    position: relative;
+    width: 300px;
+    height: 40px;
+    transition: 0.5s;
+}
+
+.search input{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    color: #000000;
+    background: transparent;
+    border: none;
+}
 /*-----------------------------------------------------
 # Mobile Navigation 
 -------------------------------------------------------*/
