--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,26 @@ header.active{
     color: #000000;
     background: transparent;
     border: none;
+    border-bottom: 1px solid #000000;
+    outline: none;
+    padding: 0 10px 0 15px;
+}
+
+.search input ::placeholder{
+    color: #000000;
+    text-transform: uppercase;
+    font-weight: 350;
+}
+
+.search ion-icon{
+    font-size: 1.4em;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 10px;
+    padding-left: 10px;
+    color: #000000;
+    cursor: pointer;
 }
 /*-----------------------------------------------------
 # Mobile Navigation 
