--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ header.active{
     padding-left: 10px;
     color: #000000;
     cursor: pointer;
+    border-left: 1px solid #000000;
 }
 /*-----------------------------------------------------
 # Mobile Navigation 
@@ -129,6 +130,39 @@ header.active{
 /*-------------------------------------------------------
 # Banner
 --------------------------------------------------------*/
+.banner{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 0 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: 0.5s; 
+}
+
+.banner::after{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+.bg-slide{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
 
 /*-------------------------------------------------------
 #Sections General
