--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,23 @@ header.active{
     overflow: hidden;
 }
 
+.bg-slide .content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60vw;
+    z-index: 1100;
+    transition: ease-in-out 3s;
+}
+
+.bg-slide .content h1{
+    font-size: 5em;
+    text-transform: uppercase;
+}
+
+
+
 /*-------------------------------------------------------
 #Sections General
 ---------------------------------------------------------*/
