--- a/css/style.css
+++ b/css/style.css
@@ -168,10 +168,12 @@ header.active{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: scale(0) translate(-50%, -50%);
     width: 60vw;
     z-index: 1100;
     transition: ease-in-out 3s;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .bg-slide .content h1{
@@ -179,8 +181,61 @@ header.active{
     text-transform: uppercase;
 }
 
+.bg-slide .content p{
+    font-family: "Dancing Script", cursive;
+    font-weight: 200;
+    font-size: 1.5em;
+    letter-spacing: 1px;
+}
 
+.bg-slide.active .content{
+    transform: scale(1) translate(-50%, -50%);
+    opacity: 1;
+    visibility: visible;
 
+}
+
+.circle {
+   border-radius: 50%;
+   overflow: hidden;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transform: translate(0, 0)rotateZ(0);
+   opacity: 0;
+   visibility: hidden;
+   transition: 3s;
+}
+.circle.bg{
+    background: transparent;
+    width: 140vw;
+    height: 140vw;
+    border-radius: 0;
+}
+
+.circle.large{
+    width: 70vw;
+    height: 70vw;
+}
+
+.circle.small{
+    width: 35vw;
+    height: 35vw;
+}
+
+.circle img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+}
+
+circle.bg img{
+    border-radius: 0;
+    
+}
 /*-------------------------------------------------------
 #Sections General
 ---------------------------------------------------------*/
