--- a/css/style.css
+++ b/css/style.css
@@ -244,25 +244,66 @@ header.active{
     transform: scale(4);
 }
 
-.bg-slide.active .circle.bg{
-    transform: translate(0, 0) rotateZ(-360deg);
+.bg-slide.active .circle.bg,
+.bg-slide.active .circle.large,
+.bg-slide.active .circle.small {
+    animation-name: spin;
+    animation-duration: 3s; /* Adjust duration as needed */
+    animation-timing-function: ease-out; /* Adjust timing function as needed */
     opacity: 1;
     visibility: visible;
 }
 
-.bg-slide.active .circle.large{
-    transform: translate(0, 0) rotateZ(-720deg);
-    opacity: 1;
-    visibility: visible;
+@keyframes spin {
+    0% {
+        transform: translate(0, 0) rotateZ(0deg);
+    }
+    100% {
+        transform: translate(0, 0) rotateZ(360deg);
+    }
 }
 
-.bg-slide.active .circle.small{
-    transform: translate(0, 0) rotateZ(-720deg);
-    opacity: 1;
-    visibility: visible;
+.slide-loader{
+    position: absolute;
+    z-index: 1100;
+    bottom: 50px;
+    right: 100px;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 0;
 }
 
+.slide-loader li{
+    list-style: none;
+    display: flex;
+    align-items: end;
+}
 
+.slide-loader li a{
+    text-decoration: none;
+    color: #111111;
+    font-size: 2em;
+    font-weight: 800;
+    transition: 0.5s;
+    line-height: 1em;
+    cursor: pointer;
+    padding: 0;
+}
+
+.slide-loader li a.active,
+.slide-loader li a:hover{
+    font-size: 4em;
+}
+
+.slide-loader::before {
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: -70%;
+    width: 100px;
+    height: 2px;
+    background: #111111;
+}
 /*-------------------------------------------------------
 #Sections General
 ---------------------------------------------------------*/
