--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,19 @@ header.active{
 
 .lead{
    position: absolute;
-    
+   bottom: 0;
+   z-index: 1000;
+   width: 300px;
+   height: 300px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.move-down{
+    position: absolute;
+    z-index: 1100;
+    color: #111111;
 }
 /*-------------------------------------------------------
 #Sections General
