--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,20 @@ section{
     transition: ease-in-out 1s;
     transform-origin: bottom;
     z-index: 1100;
+    opacity: 0;
+}
+
+section::-webkit-scrollbar{
+    display: none;
+}
+
+section.section-show{
+    padding: 150px 100px 100px;
+    top: 0;
+    height: auto;
+    min-height: 100vh;
+    overflow-y: visible;
+    opacity: 1;
 }
 
 /*---------------------------------------------------------
