--- a/css/style.css
+++ b/css/style.css
@@ -424,6 +424,15 @@ section.section-show{
     opacity: 1;
 }
 
+section h1{
+    font-family:"Dancing Script", cursive;
+    font-weight: 400;
+    font-size: 4em;
+    letter-spacing: 1px;
+    margin-bottom: 150px;
+    text-align: center;
+}
+
 /*---------------------------------------------------------
 # About Section
 ----------------------------------------------------------*/
