--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,18 @@ section h1{
     text-align: center;
 }
 
+section h4{
+    font-family: "Dancing Script", cursive;
+    font-weight: 300;
+    font-size: 2.5em;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+}
+
+section p{
+    
+}
+
 /*---------------------------------------------------------
 # About Section
 ----------------------------------------------------------*/
