--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,7 @@ section p{
     transform: perspective(2000px);
     transition: ease-in-out 1s;
     border-radius: 0;
-    box-shadow: inset 300px 0 50px rgba(0,0,0, 0.25);
+    box-shadow: inset 300px 0 50px rgba(116, 112, 112, 0.25);
 }
 
 .card:hover{
@@ -554,7 +554,7 @@ section p{
     z-index: 1000;
 }
 
-.card .img-box{
+.card .img-box {
     position: relative;
     border-style: none;
     width: 100%;
@@ -570,8 +570,11 @@ section p{
 
 .card .img-box img{
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 20px;
+    left: 20px;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
 }
 /*--------------------------------------------------------
 #Portfolio Section 
