--- a/css/style.css
+++ b/css/style.css
@@ -534,48 +534,43 @@ section p{
     background: #111111;
 }
 
-.card{
+.card {
     position: relative;
-    margin: 20px 0;
-    width: 350px;
-    height: 500px;
+    margin: 30px ;
+    width: 300px;
+    height: 300px;
     background: #ffffff;
     border: none;
     transform-style: preserve-3d;
     transform: perspective(2000px);
-    transition: ease-in-out 1s;
+    transition: transform 1s ease-in-out;
     border-radius: 0;
-    box-shadow: inset 300px 0 50px rgba(116, 112, 112, 0.25);
+    box-shadow: inset 300px 0 50px rgba(55, 53, 53, 0.25);
 }
 
-.card:hover{
-    transform: perspective(2000px);
-    box-shadow: inset 20px 0 50px rgba(0,0,0, 0.25);
-    z-index: 1000;
+.card:hover .img-box {
+    transform:rotateY(-130deg);
 }
 
 .card .img-box {
     position: relative;
     border-style: none;
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 300px;
     transform-origin: left;
     z-index: 1;
-    transition: 1s;
-}
-
-.card:hover .img-box{
-    transform: rotateY(-130deg);
+    transition: transform 1s;
 }
 
 .card .img-box img{
     position: absolute;
-    top: 20px;
-    left: 20px;
-    width: 50px;
-    height: 50px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
+
 /*--------------------------------------------------------
 #Portfolio Section 
 ----------------------------------------------------------*/
