add item for tab

--- a/css/style.css
+++ b/css/style.css
@@ -656,8 +656,9 @@ section p{
     margin-bottom: 30px;
 }
 
-
-
+.portfolio .portfolio-item .portfolio-img{
+    
+}
 /*--------------------------------------------------------
 # Contact
 ----------------------------------------------------------*/
