--- a/css/style.css
+++ b/css/style.css
@@ -657,7 +657,17 @@ section p{
 }
 
 .portfolio .portfolio-item .portfolio-img{
-    
+    overflow: hidden;
+}
+
+.portfolio .portfolio-item .portfolio-img img{
+    transition: all 0.6s;
+}
+
+.portfolio .portfolio-item .portfolio info{
+   opacity: 0;
+   position: absolute;
+   
 }
 /*--------------------------------------------------------
 # Contact
