--- a/css/style.css
+++ b/css/style.css
@@ -653,6 +653,7 @@ section p{
 }
 
 .portfolio .portfolio-item{
+    position: relative;
     margin-bottom: 30px;
 }
 
@@ -664,11 +665,36 @@ section p{
     transition: all 0.6s;
 }
 
-.portfolio .portfolio-item .portfolio info{
-   opacity: 0;
+.portfolio .portfolio-item .portfolio-info{
    position: absolute;
-   
+   /*opacity: 0;*/
+   left: 12px;
+   right: 12px;
+   bottom: 0;
+   z-index: 3;
+   transition: all 0.3s;
+   background: var(--primary);
+   padding: 10px 10px;
 }
+
+.portfolio .portfolio-item .portfolio-info h4{
+    font-size: 12px;
+    color: #ffffff;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+
+.portfolio .portfolio-item .portfolio-info p{
+    color: #f9fcfe;
+    font-size: 15px;
+    margin-bottom: 0;
+}
+
+.portfolio .portfolio-item .portfolio-info .preview-link
+.portfolio .portfolio-item .portfolio-info .details-link{
+    
+}
+
 /*--------------------------------------------------------
 # Contact
 ----------------------------------------------------------*/
