--- a/css/style.css
+++ b/css/style.css
@@ -720,7 +720,9 @@ section p{
 /*--------------------------------------------------------
 # Contact
 ----------------------------------------------------------*/
-
+.contact h1{
+    margin-bottom: 50px;
+}
 /*--------------------------------------------------------
 # Responsive Design  
 ----------------------------------------------------------*/
